# Code

./: CMakeLists.txt  README.md  Simulation.cpp  Visualisation.cpp  codeCorrecteur.cpp  main.cpp  mainVisualisation.cpp
model/Voisinage/: Voisinage.cpp  Voisinage.h
model/cellule/: cellule.cpp  cellule.h  celluleQuoromD.cpp  celluleQuoromD.h
model/cellule/codeCorrecteur/: correcteur.cpp  correcteur.h
model/gpu/: MAJQuoromD.cu  MAJQuoromD.cuh
model/graphe/: graphe.cpp  graphe.cu  graphe.cuh  graphe.h  grille.cpp  grille.cu  grille.cuh  grille.h
model/struct/: struct.cpp  struct.h
model/util/: file.cpp  file.h
script/: visualisation.py
simulation/: simulation.cpp  simulation.h  simulationQuoromD.cpp  simulationQuoromD.h
visualisation/: visualisation.cpp  visualisation.h  visualisationGraphe.cpp  visualisationGraphe.h  visualisationGrille.cpp  visualisationGrille.h
visualisation/codeCorrecteur/: VisuCodeCorrecteur.cpp  VisuCodeCorrecteur.h
